syntax = "proto3";

package user;

import "definitions/validate/Validate.proto";
import "definitions/user/UserRole.proto";
import "definitions/user/UserStatus.proto";

option go_package = "github.com/yb2020/odoc-proto/gen/go/user";


// 用户模型
message User {
  string id = 1;
  string username = 2 [(validate.rules).string = {
    min_len: 6,
    max_len: 50,
    pattern: "^[a-zA-Z0-9][a-zA-Z0-9_]{4,48}[a-zA-Z0-9]$"
  }];
  string email = 3 [(validate.rules).string.email = true];
  string password = 4 [(validate.rules).string = {
    min_len: 6,
    max_len: 100
  }]; // 注意：在实际响应中不会返回密码
  string nickname = 5;
  string avatar = 6;
  repeated user.UserRole roles = 7;
  string accessToken = 8;
  uint64 accessTokenExpires = 9;
  string refreshToken = 10;
  uint64 refreshTokenExpires = 11;
  uint64 lastLogin = 12;
  string googleOpenId = 13;
  user.UserStatus status = 14;
}

// @api_path: /api/user/profile
// @method: GET
// @content-type: application/json
// @summary: 前端获取用户信息
message GetProfileRequest {}
message GetProfileResponse {
  User user = 1;
}

// @api_path: /api/user/email/exists
// @method: GET
// @content-type: application/json
// @summary: 检查用户是否存在
message GetExistsByEmailRequest {
  string email = 1 [(validate.rules).string.email = true];
}
message GetExistsByEmailResponse {
  bool exists = 1;
}



// @api_path: /api/user/register
// @method: POST
// @content-type: application/json
// @summary: 用户注册
message RegisterRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string = {
    min_len: 6,
    max_len: 100
  }];
}
message RegisterResponse {
  User user = 1;
}

// @api_path: /api/user/profile/update
// @method: POST
// @content-type: application/json
// @summary: 更新用户信息
message UpdateProfileRequest {
  User user = 1 [(validate.rules).message.required = true];
}
message UpdateProfileResponse {
  User user = 1;
}