syntax = "proto3";

package user;

option go_package = "github.com/yb2020/odoc-proto/gen/go/user";

// UserRole 用户角色枚举
enum UserRole {
  // 未知角色，默认值
  ROLE_UNKNOWN = 0;
  // 管理员角色
  ROLE_ADMIN = 1;
  // 操作员角色
  ROLE_OPERATOR = 2;
  // 普通用户角色
  ROLE_USER = 3;
  // 访客角色
  ROLE_GUEST = 4;
}